k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cloudkite-deploy
spec:
  type: LoadBalancer
  selector:
    app: cloudkite-app
  ports:
  - port: 80
    targetPort: 8080
